[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cairn-tasks"
version = "0.1.0"
description = "Minimal AI agent memory system"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[project.scripts]
cairn = "cairn:main"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = true
